--- a/templates/host.html
+++ b/templates/host.html
@@ -246,14 +246,14 @@
                     <label for="evaluation-input">Position:</label>
                     <select id="evaluation-input" class="form-select">
                         <option value="">Keine Bewertung</option>
-                        <option value="Weiß besser">Weiß besser</option>
-                        <option value="Weiß klar besser">Weiß klar besser</option>
-                        <option value="Weiß auf Gewinn">Weiß auf Gewinn</option>
-                        <option value="Ausgeglichen">Ausgeglichen</option>
-                        <option value="unklar">unklar</option>
-                        <option value="Schwarz besser">Schwarz besser</option>
-                        <option value="Schwarz klar besser">Schwarz klar besser</option>
-                        <option value="Schwarz auf Gewinn">Schwarz auf Gewinn</option>
+                        <option value="+-">+- (Weiß auf Gewinn)</option>
+                        <option value="+/-">+/- (Weiß klar besser)</option>
+                        <option value="±">± (Weiß besser)</option>
+                        <option value="=">=  (Ausgeglichen)</option>
+                        <option value="∞">∞ (Unklar)</option>
+                        <option value="∓">∓ (Schwarz besser)</option>
+                        <option value="-/+">-/+ (Schwarz klar besser)</option>
+                        <option value="-+">-+ (Schwarz auf Gewinn)</option>
                     </select>
                 </div>
                 <div class="notation-symbols">
