--- a/templates/index.html
+++ b/templates/index.html
@@ -68,6 +68,8 @@
         }
         .board-container {
             margin-bottom: 10px;
+            position: relative;
+            overflow: hidden;
         }
         .controls {
             text-align: center;
@@ -150,6 +152,10 @@
             text-align: center;
             margin-bottom: 20px;
             color: #666;
+        }
+        .board-container img {
+            pointer-events: none;
+            user-select: none;
         }
     </style>
 </head>
